feat: get multiple assets
